--- a/css/style.css
+++ b/css/style.css
@@ -1408,147 +1408,149 @@ section.plus a.download div:after {
   background: #cb3521;
 }
 
-/* line 573, ../scss/style.scss */
-#plus-entrepreneuriat {
-  background: #252525;
-}
-
-/* line 577, ../scss/style.scss */
+/* line 574, ../scss/style.scss */
 #transversalite {
   background: #2145cb;
   position: relative;
   overflow: hidden;
 }
-/* line 582, ../scss/style.scss */
+/* line 579, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap {
   background: #1331a1;
 }
-/* line 584, ../scss/style.scss */
+/* line 581, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:hover {
   background: #102a8a;
 }
-/* line 588, ../scss/style.scss */
+/* line 585, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:after {
   color: #2145cb;
 }
-/* line 593, ../scss/style.scss */
+/* line 590, ../scss/style.scss */
 #transversalite:after {
   content: "2";
 }
 
-/* line 599, ../scss/style.scss */
+/* line 596, ../scss/style.scss */
 #prop4,
 #prop5,
 #prop6 {
   background: #2145cb;
 }
 
-/* line 602, ../scss/style.scss */
+/* line 599, ../scss/style.scss */
 #prop4-image > div {
   background-image: url("../img/pasfait.jpg");
 }
 
-/* line 605, ../scss/style.scss */
+/* line 602, ../scss/style.scss */
 #prop5-image > div {
   background-image: url("../img/pasfait.jpg");
 }
 
-/* line 608, ../scss/style.scss */
+/* line 605, ../scss/style.scss */
 #prop6-image > div {
   background-image: url("../img/creativite.jpg");
 }
 
-/* line 612, ../scss/style.scss */
+/* line 609, ../scss/style.scss */
 #ouverture {
   background: #ce2c9a;
   position: relative;
   overflow: hidden;
 }
-/* line 617, ../scss/style.scss */
+/* line 614, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap {
   background: #8b1164;
 }
-/* line 619, ../scss/style.scss */
+/* line 616, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap:hover {
   background: #740e54;
 }
-/* line 623, ../scss/style.scss */
+/* line 620, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap:after {
   color: #ce2c9a;
 }
-/* line 628, ../scss/style.scss */
+/* line 625, ../scss/style.scss */
 #ouverture:after {
   content: "3";
 }
 
-/* line 634, ../scss/style.scss */
+/* line 631, ../scss/style.scss */
 #prop7,
 #prop8,
 #prop9 {
   background: #ce2c9a;
 }
 
-/* line 637, ../scss/style.scss */
+/* line 634, ../scss/style.scss */
 #prop7-image > div {
   background-image: url("../img/ouverture.jpg");
 }
 
-/* line 640, ../scss/style.scss */
+/* line 637, ../scss/style.scss */
 #prop8-image > div {
   background-image: url("../img/pasfait.jpg");
 }
 
-/* line 643, ../scss/style.scss */
+/* line 640, ../scss/style.scss */
 #prop9-image > div {
   background-image: url("../img/pasfait.jpg");
 }
 
-/* line 647, ../scss/style.scss */
+/* line 646, ../scss/style.scss */
+#plus-entrepreneuriat,
+#plus-transversalite,
+#plus-ouverture {
+  background: #252525;
+}
+
+/* line 650, ../scss/style.scss */
 #debat {
   background: #276440;
 }
-/* line 650, ../scss/style.scss */
+/* line 653, ../scss/style.scss */
 #debat h1 {
   text-align: center;
 }
-/* line 653, ../scss/style.scss */
+/* line 656, ../scss/style.scss */
 #debat h2 {
   text-align: center;
   line-height: 1.5em;
 }
-/* line 657, ../scss/style.scss */
+/* line 660, ../scss/style.scss */
 #debat img {
   display: block;
   margin: 50px auto;
   width: 300px;
 }
 
-/* line 665, ../scss/style.scss */
+/* line 668, ../scss/style.scss */
 #form {
   text-align: center;
   margin: 30px 0 40px;
 }
 
-/* line 669, ../scss/style.scss */
+/* line 672, ../scss/style.scss */
 #form p {
   margin-bottom: 20px;
 }
 
-/* line 672, ../scss/style.scss */
+/* line 675, ../scss/style.scss */
 #form input[type="email"] {
   color: #333;
   padding: 4px 8px;
   border: none;
   width: 250px;
 }
-/* line 678, ../scss/style.scss */
+/* line 681, ../scss/style.scss */
 #form input[type="email"]:focus {
   -webkit-box-shadow: inset 0 0 5px 2px #2965c7;
   -moz-box-shadow: inset 0 0 5px 2px #2965c7;
   box-shadow: inset 0 0 5px 2px #2965c7;
 }
 
-/* line 682, ../scss/style.scss */
+/* line 685, ../scss/style.scss */
 #form input[type="submit"] {
   border: none;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ed8a1f), color-stop(100%, #e07d12));
@@ -1558,7 +1560,7 @@ section.plus a.download div:after {
   background-image: linear-gradient(top, #ed8a1f, #e07d12);
   padding: 5px 15px;
 }
-/* line 688, ../scss/style.scss */
+/* line 691, ../scss/style.scss */
 #form input[type="submit"]:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ef9636), color-stop(100%, #ed8a1f));
   background-image: -webkit-linear-gradient(top, #ef9636, #ed8a1f);
