--- a/scss/style.scss
+++ b/scss/style.scss
@@ -459,7 +459,7 @@ section.plus{
 		top: 20%;
 		width: 150%;
 		left: -25%;
-		padding: 15px 0;
+		padding: 15px 10px;
 		background: $couleur-texte-corporate;
 		text-align: center;
 		@include transition();
