Modification des photos theses pluridisciplinaires

--- a/css/style.css
+++ b/css/style.css
@@ -1445,7 +1445,7 @@ section.plus a.download div:after {
 
 /* line 602, ../scss/style.scss */
 #prop5-image > div {
-  background-image: url("../img/pasfait.jpg");
+  background-image: url("../img/theses.jpg");
 }
 
 /* line 605, ../scss/style.scss */
