--- a/scss/style.scss
+++ b/scss/style.scss
@@ -600,7 +600,7 @@ section.plus{
 	background-image: url('../img/pasfait.jpg');
 }
 #prop5-image > div{
-	background-image: url('../img/pasfait.jpg');
+	background-image: url('../img/theses.jpg');
 }
 #prop6-image > div{
 	background-image: url('../img/creativite.jpg');
