AJout des images de fond manquantes

--- a/css/style.css
+++ b/css/style.css
@@ -1467,7 +1467,7 @@ section.plus a.download div:after {
 
 /* line 619, ../scss/style.scss */
 #prop4-image > div {
-  background-image: url("../img/pasfait.jpg");
+  background-image: url("../img/silos.jpg");
 }
 
 /* line 622, ../scss/style.scss */
@@ -1517,12 +1517,12 @@ section.plus a.download div:after {
 
 /* line 657, ../scss/style.scss */
 #prop8-image > div {
-  background-image: url("../img/pasfait.jpg");
+  background-image: url("../img/milieux.jpg");
 }
 
 /* line 660, ../scss/style.scss */
 #prop9-image > div {
-  background-image: url("../img/pasfait.jpg");
+  background-image: url("../img/erasmus.jpg");
 }
 
 /* line 666, ../scss/style.scss */
