--- a/scss/style.scss
+++ b/scss/style.scss
@@ -617,7 +617,7 @@ section.plus{
 	background: $couleur-fond-transversalite;
 }
 #prop4-image > div{
-	background-image: url('../img/pasfait.jpg');
+	background-image: url('../img/silos.jpg');
 }
 #prop5-image > div{
 	background-image: url('../img/theses.jpg');
@@ -655,10 +655,10 @@ section.plus{
 	background-image: url('../img/ouverture.jpg');
 }
 #prop8-image > div{
-	background-image: url('../img/pasfait.jpg');
+	background-image: url('../img/milieux.jpg');
 }
 #prop9-image > div{
-	background-image: url('../img/pasfait.jpg');
+	background-image: url('../img/erasmus.jpg');
 }
 
 #plus-entrepreneuriat,
